infrastructure/final-infra.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Template for final infrastructure (ap-southeast-1)

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
  StarterEC2AMI:
    Type: AWS::EC2::Image::Id
    Description: AMI ID for the starter ec2 that you have properly configured with the server binary

Resources:
  GamedayVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: GamedayVPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1a"
      Tags:
        - Key: Name
          Value: "Public Subnet 1"

  # Add second subnet for better availability
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref GamedayVPC
      AvailabilityZone: "ap-southeast-1b"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "Public Subnet 2"

  # Add separate subnets for ec2, rds, and elasticache
  ApplicationSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1a"
      Tags:
        - Key: Name
          Value: "Application Subnet 1"

  ApplicationSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1b"
      Tags:
        - Key: Name
          Value: "Application Subnet 2"

  DatabaseSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.4.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1a"
      Tags:
        - Key: Name
          Value: "Database Subnet 1"

  DatabaseSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.5.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1b"
      Tags:
        - Key: Name
          Value: "Database Subnet 2"

  CacheSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.6.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1a"
      Tags:
        - Key: Name
          Value: "Cache Subnet 1"

  CacheSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.7.0/24
      VpcId: !Ref GamedayVPC
      MapPublicIpOnLaunch: true
      AvailabilityZone: "ap-southeast-1b"
      Tags:
        - Key: Name
          Value: "Cache Subnet 2"

  # Add nat gateway for private subnets
  GamedayNGW:
    Type: AWS::EC2::NatGateway
    Properties:
      AvailabilityMode: regional
      VpcId: !Ref GamedayVPC

  NGWRoute:
    Type: AWS::EC2::Route
    DependsOn: GamedayNGW
    Properties:
      RouteTableId: !Ref NGWRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref GamedayNGW

  NGWRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GamedayVPC

  AppSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet1
      RouteTableId: !Ref NGWRouteTable

  AppSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref ApplicationSubnet2
      RouteTableId: !Ref NGWRouteTable

  DatabaseSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DatabaseSubnet1
      RouteTableId: !Ref NGWRouteTable

  DatabaseSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DatabaseSubnet2
      RouteTableId: !Ref NGWRouteTable

  CacheSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CacheSubnet1
      RouteTableId: !Ref NGWRouteTable

  CacheSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref CacheSubnet1
      RouteTableId: !Ref NGWRouteTable

  GamedayIGW:
    Type: AWS::EC2::InternetGateway

  GamedayIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref GamedayIGW
      VpcId: !Ref GamedayVPC

  GamedayRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GamedayVPC

  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: GamedayIGWAttachment
    Properties:
      RouteTableId: !Ref GamedayRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref GamedayIGW

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref GamedayRouteTable

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref GamedayRouteTable

  # Individual SG for EC2, Load Balancer, RDS, Elasticache
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP only from CF
      VpcId: !Ref GamedayVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourcePrefixListId: pl-31a34658 # Using prefix list for cloudfront, com.amazonaws.global.cloudfront.origin-facing
      Tags:
        - Key: Name
          Value: "ALB Security Group"

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP only from ALB
      VpcId: !Ref GamedayVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: "EC2 Security Group"

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow MySQL only from EC2
      VpcId: !Ref GamedayVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: "RDS Security Group"

  CacheSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Redis only from EC2
      VpcId: !Ref GamedayVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: "Cache Security Group"

  # StarterEC2: 
  #   Type: AWS::EC2::Instance
  #   Properties: 
  #     # Using amazon linux 2023 kernel 6.1 64-bit (x86), uefi-preferred
  #     ImageId: ami-03c3282f979a6a9b0
  #     InstanceType: t3.micro
  #     KeyName: !Ref KeyName
  #     NetworkInterfaces: 
  #       - AssociatePublicIpAddress: true
  #         DeviceIndex: "0"
  #         GroupSet:
  #           - !Ref EC2SecurityGroup
  #         SubnetId: !Ref PublicSubnet1
  #     Tags:
  #       - Key: Name
  #         Value: "StarterEC2"

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Type: application
      Scheme: internet-facing
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: "Gameday Load Balancer"

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref GamedayVPC
      TargetType: instance
      HealthCheckPath: /
      Tags:
        - Key: Name
          Value: "Gameday Target Group"

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref StarterEC2AMI
        InstanceType: t3.micro
        SecurityGroupIds:
          - !Ref EC2SecurityGroup
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            cd /home/ec2-user
            chmod +x server
            sudo ./server

    ASG:
      Type: AWS::AutoScaling::AutoScalingGroup
      Properties:
        VPCZoneIdentifier:
          - !Ref ApplicationSubnet1
          - !Ref ApplicationSubnet2
        DesiredCapacity: 2
        MinSize: 2
        MaxSize: 10
        TargetGroupArns:
          - !Ref TargetGroup
        LaunchTemplate:
          LaunchTemplateId: !Ref LaunchTemplate
          Version: !GetAtt LaunchTemplate.LatestVersionNumber
